# faultcore

./: .dockerignore  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile.builder  LICENSE  README.md  build.sh  docker-compose.yml  docs.sh  lint.sh  main.py  pyproject.toml  setup.py  tests.sh  tests_long.sh
.github/workflows/: ci.yml  publish-pypi.yml  stress-long.yml
docker/: Dockerfile.runner  Dockerfile.services  README.md  docker-compose.yml
docker/scripts/: network_scenario.py  run_compose_and_collect.sh  run_in_docker.sh
docker/servers/: udp_echo_server.py
docs/: api_reference.md  architecture.md  cli_usage.md  concepts.md  conf.py  examples.md  getting_started.md  index.md  interceptor_and_shm.md  operations_tuning.md  policies_and_context.md  shm_protocol.md  testing_and_examples.md  troubleshooting.md
docs/reference/: burst_loss.md  connection_error.md  correlated_loss.md  dns.md  downlink.md  fault.md  half_open.md  jitter.md  latency.md  packet_duplicate.md  packet_loss.md  packet_reorder.md  payload_mutation.md  policy_application.md  policy_context.md  policy_registry.md  rate.md  session_budget.md  timeout.md  uplink.md
examples/: 01_http_requests.py  01_timeout.py  02_http_async.py  02_retry.py  03_fallback.py  03_tcp_client.py  04_circuit_breaker.py  04_udp_client.py  05_rate_limit.py  06_combined.py  06_multi_protocol.py  07_context.py  08_bandwidth_throttle.py  09_network_timeout.py  10_target_priority.py  11_fault_metrics.py  12_perf_baseline.py  13_end_to_end_scenarios.py  1_http_requests.py  2_http_async.py  3_tcp_client.py  4_udp_client.py  5_rate_limit.py  6_multi_protocol.py  7_latency_jitter.py  8_bandwidth_throttle.py  9_network_timeout.py  examples_network.py  examples_network_async.py  run_with_preload.sh
faultcore_interceptor/: Cargo.toml
faultcore_interceptor/src/: lib.rs  shm.rs
faultcore_network/: Cargo.toml
faultcore_network/src/: chaos_engine.rs  interceptor_bridge.rs  lib.rs  observability.rs  record_replay.rs  runtime.rs  setpriority_compat.rs  shm_contract.rs  shm_runtime.rs  socket_runtime.rs
faultcore_network/src/layers/: l1_chaos.rs  l2_qos.rs  l3_routing.rs  l4_transport.rs  l5_session.rs  l6_presentation.rs  l7_resolver.rs  mod.rs  r1_session_guard.rs  r2_chaos_base.rs  r3_flow_control.rs  r4_timing_variation.rs  r5_transport_faults.rs  r6_resolver_faults.rs  r7_payload_transform.rs
faultcore_preload/src/: preload.c
integration_tests/: Dockerfile.test
integration_tests/scripts/: run_tests.sh
integration_tests/servers/: tcp_echo_server.py
scripts/: build_native_artifacts.sh
src/faultcore/: __init__.py  cli.py  decorator.py  decorator_helpers.py  metrics_runtime.py  native.py  policy_context.py  policy_registry.py  profile_parsers.py  reporting.py  shm_writer.py  target_name_helpers.py  target_rule_helpers.py  wrapper_runtime.py
src/faultcore/reporting/: __init__.py  core.py  html_renderer.py
src/faultcore/reporting/templates/: charts.mako  details.mako  event_rows.mako  kpi_card.mako  network_metrics_panel.mako  network_metrics_parts.mako  report_page.mako  scripts.js  site_details.mako  styles.css.mako
src/faultcore_core/: circuit_breaker.rs  context.rs  feature_flag.rs  lib.rs  network_queue.rs  policies.rs  registry.rs  retry.rs  shm.rs  timeout.rs
src/faultcore_core/features/: flag.rs
src/faultcore_core/network/: context.rs  mod.rs  pipeline.rs  queue.rs
src/faultcore_core/network/layers/: l1_chaos.rs  l2_qos.rs  l3_routing.rs  l4_transport.rs  mod.rs
src/faultcore_core/policies/: async_retry.rs  circuit_breaker.rs  mod.rs  rate_limit.rs  retry.rs
src/faultcore_core/registry/: context.rs  layer.rs  matching.rs  mod.rs  policy.rs  shm_registry.rs
src/faultcore_core/registry/layers/: circuit_breaker.rs  fallback.rs  latency.rs  mod.rs  packet_loss.rs  rate_limit.rs  retry.rs  timeout.rs
src/faultcore_core/system/: context.rs  mod.rs  shm.rs
tests/: conftest.py  test_apply_policy_decorator.py  test_async.py  test_async_chaos_wrapper.py  test_async_fix.py  test_async_isolation.py  test_async_wrapper_errors.py  test_circuit_breaker_advanced.py  test_circuit_breaker_comprehensive.py  test_circuit_breaker_edge_cases.py  test_circuit_breaker_repr.py  test_classify_exception.py  test_classify_exception_edge_cases.py  test_combined_decorators.py  test_context.py  test_context_advanced.py  test_context_comprehensive.py  test_core.py  test_decorator_args.py  test_decorator_varargs_kwargs.py  test_decorator_wrapper.py  test_fallback_advanced.py  test_fallback_comprehensive.py  test_fallback_edge_cases.py  test_feature_flag_manager.py  test_matching_comprehensive.py  test_module_level_functions.py  test_network_queue.py  test_network_queue_behavior.py  test_network_queue_behavior_advanced.py  test_network_queue_comprehensive.py  test_network_queue_error_handling.py  test_network_queue_fd_limit.py  test_network_queue_parsing.py  test_network_queue_parsing_advanced.py  test_network_queue_rejection.py  test_network_queue_stats.py  test_network_timeout.py  test_pipeline_basic.py  test_pipeline_integration.py  (+17 more)
tests/integration/: test_bandwidth.py  test_hot_reload_targets_concurrency.py  test_interceptor_integration.py  test_latency.py  test_record_replay.py  test_reorder_downlink.py  test_session_budget.py  test_shm_concurrency_contract.py  test_stress.py  test_targets.py  test_targets_dns_hostname.py  test_targets_hostname_transport.py  test_targets_http_hostname.py  test_targets_ipv6_mixed.py  test_targets_tls_sni.py  test_timeout.py
tests/integration/servers/: http_server.py  tcp_echo_server.py
tests/unit/: test_cli.py  test_native_paths.py  test_policy_context.py  test_policy_registry_validation.py  test_profile_parsers.py  test_reporting.py  test_shm_contract.py  test_shm_writer.py  test_utility.py
tests/unit/async/: test_async.py
tests/unit/decorators/: test_decorator.py  test_target_policy_decorator.py
