[project]
name = "faultcore"
dynamic = ["version"]
description = "Fault injection and testing core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "faultcore._faultcore"
python-source = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "maturin>=1.7",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["faultcore"]
combine-as-imports = true
