[project]
name = "faultcore"
version = "2026.4.9"
description = "Fault injection and testing core"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mako>=1.3.10",
    "typer>=0.24.1",
]

[project.scripts]
faultcore = "faultcore.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
faultcore = [
    "_faultcore.abi3.so",
    "_native/*/*.so",
    "reporting/templates/*.mako",
]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "cibuildwheel>=2.23.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "twine>=6.2.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sphinx>=8.1.3",
    "myst-parser>=4.0.1",
    "sphinxcontrib-mermaid>=2.0.1",
]

[tool.cibuildwheel]
build = "cp310-*"
skip = "*-musllinux_*"
test-skip = "*"
before-all = [
    "curl https://sh.rustup.rs -sSf | sh -s -- -y --profile minimal",
]
before-build = [
    "bash ./scripts/build_native_artifacts.sh",
]

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "aarch64"]
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
repair-wheel-command = ""

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.ruff.lint.isort]
known-first-party = ["faultcore"]
combine-as-imports = true
