[package]
name = "faultcore_interceptor"
version = "2026.2.28"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
parking_lot = "0.12.5"
faultcore_network = { path = "../faultcore_network" }
